--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-dropdown": "^1.3.6",
     "react-easy-chart": "^1.0.0",
     "react-flexbox-grid": "^2.0.0",
     "react-lightweight-tooltip": "^1.0.0",
@@ -15,6 +16,9 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-widgets": "^4.1.1",
+    "react-widgets-moment": "^4.0.4",
+    "react-widgets-moment-localizer": "^1.0.2",
     "recharts": "^1.0.0-beta.7",
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
