--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-social-share-buttons": "^1.0.2",
+    "react-spinners": "^0.2.5",
     "react-widgets": "^4.1.1",
     "react-widgets-moment": "^4.0.4",
     "react-widgets-moment-localizer": "^1.0.2",
