--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-moment": "^0.6.8",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
     "react-social-share-buttons": "^1.0.2",
     "react-spinners": "^0.2.5",
     "react-widgets": "^4.1.1",
@@ -33,5 +32,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "react-scripts": "^1.0.17",
+    "react-test-renderer": "^16.2.0"
   }
 }
