--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "react-dropdown": "^1.3.6",
     "react-easy-chart": "^1.0.0",
     "react-flexbox-grid": "^2.0.0",
+    "react-icons": "^2.2.7",
     "react-lightweight-tooltip": "^1.0.0",
     "react-minimal-pie-chart": "^3.0.1",
     "react-moment": "^0.6.8",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-scroll": "^1.7.5",
     "react-social-share-buttons": "^1.0.2",
     "react-spinners": "^0.2.5",
     "react-widgets": "^4.1.1",
