--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "habitualize-client",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "enzyme-adapter-react-16": "^1.1.1",
     "jwt-decode": "^2.2.0",
